--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,11 +1,13 @@
-<div>
-    {{#each prod}}
-    <div style="display: flex; flex-flow: column nowrap;">
+<div style="display: flex; flex-flow: row ; justify-content: space-around;">
+    {{#each prodsAct}}
 
+        <div style="display: flex; flex-flow: column nowrap;">
     <h3>{{this.title}}</h3>
     <p>{{this.description}}</p>
     <p>Precio: ${{this.price}}</p>
     <p>Stock: {{this.stock}}</p>
+    <p>Cantidad: {{this.quantity}}</p>
+
     </div>
     {{/each}}
 </div>
