falta aplicar sockets

--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -6,7 +6,7 @@
     <p>{{this.description}}</p>
     <p>Precio: ${{this.price}}</p>
     <p>Stock: {{this.stock}}</p>
-    <p>Cantidad: {{this.quantity}}</p>
+    {{!-- <p>Cantidad: {{this.quantity}}</p> --}}
 
     </div>
     {{/each}}
