no funciona sockets

--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,5 +1,4 @@
-<div>
-    kaka
+<div id="containerItem" style="display: flex; flex-flow: row wrap;">
 </div>
 
 <script src="/socket.io/socket.io.js"></script>
