--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,7 +1,7 @@
-<div style="display: flex; flex-flow: row ; justify-content: space-around;">
+<div class="containerProd">
     {{#each prodsAct}}
 
-        <div style="display: flex; flex-flow: column nowrap;">
+        <div class="cardProd">
     <h3>{{this.title}}</h3>
     <p>{{this.description}}</p>
     <p>Precio: ${{this.price}}</p>
