--- a/src/views/productos.handlebars
+++ b/src/views/productos.handlebars
@@ -1,3 +1,27 @@
+{{#if userRegistered}}
+<nav>
+    <h4>Bienvenido {{userRegistered.name}} ! Tu rol es: {{userRegistered.rol}}</h4>
+    <button id="logout">Logout</button>
+</nav>
+<div class="containerProd">
+    {{#each prods}}
+
+    <div class="cardProd">
+    <h3>{{this.title}}</h3>
+    <p>{{this.description}}</p>
+    <p>Precio: ${{this.price}}</p>
+    <p>Stock: {{this.stock}}</p>
+
+    <button id="enviarData">Agregar al carrito</button>
+    </div>
+    {{/each}}
+    <script src="/js/products.js"></script>
+</div>
+{{else}}
+<nav style="display: none;">
+    <h4>Bienvenido {{email}} !</h4>
+    <button id="logout">Logout</button>
+</nav>
 <div class="containerProd">
     {{#each prods}}
 
@@ -11,3 +35,7 @@
     </div>
     {{/each}}
 </div>
+
+<script src="/js/products.js"></script>
+{{/if}}
+
