agregado login y login con github

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,6 +7,7 @@
     <input type="submit">
 </form>
 
+<a href="/api/session/"><button>Loguear con github</button></a>
 <p>¿No tenes cuenta? ¡Registrate abajo!  
 <br>    
 <a href="/register">Registrarse</a></p>
