--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,5 +1,7 @@
+<div class="container-register">
+
 <h1>¡Registrate!</h1>
-<form id="formRegistro">
+<form id="formRegistro" class="form-register">
     <label>Nombre</label>
     <input name="name">
     <label>Apellido</label>
@@ -9,9 +11,10 @@
     <label>Contraseña</label>
     <input type="password" name="password">
     <br>
-    <input type="submit">
+    <input type="submit" class="btn-submit" value="Crear cuenta">
 </form>
+</div>
 
-<p>¿Ya tenes cuenta? <a href="/">Iniciar Sesion</a></p>
+<p class="p-redirect-login">¿Ya tenes cuenta? <a href="/" class="a-login">Iniciar Sesion</a></p>
 
 <script src="/js/register.js"></script>
