--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -1,22 +1,258 @@
-body {
-    background-color: bisque;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 
+body {
+    background-color: #0f1b24;
+}
+
+a {
+    text-decoration: none;
+    color: black;
+}
+
+img {
+  width: 200px;
+  height: 200px;
+  object-fit: contain;
+}
+
+.container-img {
+  text-align: center;
+}
 
 .cardProd {
-    display: flex;
-    flex-flow: column nowrap;
-    margin: 7px 10px;
-    text-align: center;
-    /* background: rgb(2,0,36);
-    background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(9,9,121,1) 50%, rgba(0,212,255,1) 100%); */
-    background-color: #3838a3;
-    border-radius: 10px;
-    
-    padding: 0 5px;
+  text-align: center;
 }
 
 .containerProd {
     display: flex;
     flex-flow: row wrap;
 }
+
+.btn-add {
+    background-color: #2f9d8e;
+    margin: 10px 0;
+}
+
+.nav {
+    background-color: #305050;
+}
+
+.nav-user {
+    display: flex;
+    flex-flow: column nowrap;
+    width: max-content;
+    margin-left: 5px;
+}
+
+.btn-logout {
+    width: max-content;
+    background-color: darkred;
+    border-radius: 2px;
+    border-style: none;
+    margin-bottom: 8px;
+    transition: all 0.3s;
+}
+
+.btn-logout:hover {
+    cursor: pointer;
+}
+
+.btn-logout:active {
+    transform: scale(0.75);
+}
+
+/* SECCION LOGIN */
+
+.login-container {
+    display: flex;
+    flex-flow: column nowrap;
+    background-color: #737373;
+    margin: auto;
+    align-items: center;
+    width: max-content;
+    border-radius: 10px;
+}
+
+.form-login {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+}
+
+.btn-submit {
+    margin: 15px 0;
+    width: max-content;
+    text-align: center;
+    background-color: #305050;
+    /* border-color: #305050; */
+    border-style: none;
+    border-radius: 6px;
+    transition: all 0.2s;
+}
+
+.btn-submit:hover{
+    cursor: pointer;
+}
+
+.btn-submit:active {
+    transform: scale(0.90);
+}
+
+.btn-logingit {
+    margin: 10px 0;
+    border-radius: 5px;
+}
+
+.container-redirect {
+    display: flex;
+    flex-flow: column nowrap;
+}
+
+.p-redirect {
+    text-align: center;
+    margin-top: 6rem;
+    color: #305050;
+}
+
+.a-register {
+    color: #737373;
+}
+
+
+/* SECCION REGISTER */
+
+.container-register {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    background-color: #737373;
+    width: max-content;
+    margin: auto;
+    border-radius: 7px;
+    padding: 0 9px 15px 15px;
+}
+
+.form-register {
+    display: flex;
+    flex-flow: column nowrap;
+    width: max-content;
+    align-items: center;
+}
+
+.p-redirect-login {
+    text-align: center;
+    color: #305050;
+}
+
+.a-login {
+    color: #737373;
+}
+
+
+
+/* FOUNDATION */
+
+
+.product-card {
+    background-color: #fefefe;
+    border: 1px solid #e6e6e6;
+    padding: 1rem;
+    margin-bottom: 1.5rem;
+  }
+  
+  .product-card-thumbnail {
+    display: block;
+    position: relative;
+  }
+  
+  .product-card-title {
+    font-family: 'Open sans', sans-serif;
+    font-size: 0.9rem;
+    font-weight: 600;
+    line-height: 1.45rem;
+    margin-top: 1rem;
+    margin-bottom: 0;
+  }
+  
+  .product-card-desc {
+    color: #8a8a8a;
+    display: block;
+    font-family: 'Open sans', sans-serif;
+    font-size: 0.85rem;
+  }
+  
+  .product-card-price {
+    color: #3e3e3e;
+    display: inline-block;
+    font-size: 0.85rem;
+    font-weight: 600;
+    margin-top: 0.8rem;
+  }
+  
+  .product-card-sale {
+    color: #cacaca;
+    display: inline-block;
+    font-size: 0.85rem;
+    margin-left: 0.3rem;
+    text-decoration: line-through;
+  }
+  
+  .product-card-colors {
+    display: block;
+    margin-top: 0.8rem;
+  }
+  
+  .product-card-color-option {
+    display: inline-block;
+    height: 25px;
+    width: 25px;
+  }
+  
+
+  .button-hover-addcart {
+    border: 2px solid #767676;
+    background: transparent;
+    color: #767676;
+    text-transform: uppercase;
+    overflow: hidden;
+    letter-spacing: 0.07rem;
+    transition: all 0.2s ease-in-out;
+    position: relative;
+  }
+  
+  .button-hover-addcart span {
+    transition: all 0.2s ease-in-out;
+  }
+  
+  .button-hover-addcart .fa {
+    position: absolute;
+    font-size: 1.2rem;
+    top: 50%;
+    -webkit-transform: translateY(-50%);
+        -ms-transform: translateY(-50%);
+            transform: translateY(-50%);
+    color: #1779ba;
+    right: -20px;
+    transition: 0.4s right cubic-bezier(0.38, 0.6, 0.48, 1);
+  }
+  
+  .button-hover-addcart:hover {
+    border-color: #1779ba;
+    background: transparent;
+    transition: border-color 0.2s;
+  }
+  
+  .button-hover-addcart:hover span {
+    margin-right: 20px;
+    color: #1779ba;
+  }
+  
+  .button-hover-addcart:hover .fa {
+    right: 12px;
+  }
+  
+    
