--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,5 +1,5 @@
 <div class="login-container">
-<h1>¡Iniciá sesion!</h1>
+<h1>Iniciá sesion!</h1>
 <form id="formLogin" class="form-login">
     <label>Correo electrónico</label>
     <input name="email">
