--- a/src/views/productos.handlebars
+++ b/src/views/productos.handlebars
@@ -1,7 +1,8 @@
 {{#if userRegistered}}
 <nav class="nav">
     <div class="nav-user">
-    <h4>Bienvenido {{userRegistered.name}} ! Tu rol es: {{userRegistered.rol}}</h4>
+    <h4>Bienvenido {{userRegistered.name}}!</h4>
+    <h4>Tu rol es: {{userRegistered.rol}}</h4>
     <button id="logout" class="btn-logout">Logout</button>
     </div>
 </nav>
