--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,6 +1,6 @@
 <div class="container-register">
 
-<h1>¡Registrate!</h1>
+<h1>Registrate!</h1>
 <form id="formRegistro" class="form-register">
     <label>Nombre</label>
     <input name="name">
