--- a/src/public/css/main.css
+++ b/src/public/css/main.css
@@ -50,15 +50,27 @@ img {
 
 .btn-logout {
     width: max-content;
-    background-color: darkred;
-    border-radius: 2px;
-    border-style: none;
-    margin-bottom: 8px;
-    transition: all 0.3s;
+    transition: all 0.3s; 
+    background: #ff0000;
+    background-image: -webkit-linear-gradient(top, #ff0000, #ab5d5d);
+    background-image: -moz-linear-gradient(top, #ff0000, #ab5d5d);
+    background-image: -ms-linear-gradient(top, #ff0000, #ab5d5d);
+    background-image: -o-linear-gradient(top, #ff0000, #ab5d5d);
+    background-image: linear-gradient(to bottom, #ff0000, #ab5d5d);
+    -webkit-border-radius: 28;
+    -moz-border-radius: 28;
+    border-radius: 28px;
+    font-family: Arial;
+    color: #ffffff;
+    font-size: 13px;
+    padding: 5px 10px 5px 10px;
+    text-decoration: none;
 }
 
 .btn-logout:hover {
     cursor: pointer;
+    background: #db5858;
+    text-decoration: none;
 }
 
 .btn-logout:active {
@@ -75,6 +87,8 @@ img {
     align-items: center;
     width: max-content;
     border-radius: 10px;
+    margin-top: 5rem;
+    padding: 4px;
 }
 
 .form-login {
@@ -88,10 +102,10 @@ img {
     width: max-content;
     text-align: center;
     background-color: #305050;
-    /* border-color: #305050; */
     border-style: none;
     border-radius: 6px;
     transition: all 0.2s;
+    padding: 5px;
 }
 
 .btn-submit:hover{
@@ -134,6 +148,7 @@ img {
     margin: auto;
     border-radius: 7px;
     padding: 0 9px 15px 15px;
+    margin-top: 5rem;
 }
 
 .form-register {
@@ -146,6 +161,7 @@ img {
 .p-redirect-login {
     text-align: center;
     color: #305050;
+    margin-top: 2rem;
 }
 
 .a-login {
