--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -1,12 +1,19 @@
 <div class="containerProd">
     {{#each listaProds}}
 
-    <div class="cardProd">
-    <h3>{{this.title}}</h3>
-    <p>{{this.description}}</p>
-    <p>Precio: ${{this.price}}</p>
-    <p>Stock: {{this.stock}}</p>
-
-    </div>
+    <div class="product-card cardProd">
+  <div class="product-card-thumbnail container-img">
+    <img src={{this.thumbnail}} />
+  </div>
+  <span class="oculto">{{this._id}}</span>
+  <h2 class="product-card-title" id="titulo">{{this.title}}</h2>
+  <span class="product-card-desc">{{this.description}}</span>
+  <span class="product-card-price">${{this.price}}</span>
+  
     {{/each}}
+
 </div>
+
+    <button id="finCompra">Finalizar compra</button>
+
+    <script src="/js/finalizarCompra.js"></script>
