agregada documentacion de las api

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -12,10 +12,13 @@
 
 </div>
 
-{{!-- <div class="container-redirect"> --}}
 <p class="p-redirect">¿No tenes cuenta? ¡Registrate abajo!  
    <br>
 <a href="/register" class="a-register">Registrarse</a></p>
-{{!-- </div> --}}
+
+{{!-- <p class="p-redirect"><a href="/resetpassword">
+    ¿Olvidaste tu contraseña?
+</a>
+</p> --}}
 
 <script src="/js/login.js"></script>
