--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -13,6 +13,7 @@
     <br>
     <input type="submit" class="btn-submit" value="Crear cuenta">
 </form>
+<div id="faildiv"></div>
 </div>
 
 <p class="p-redirect-login">¿Ya tenes cuenta? <a href="/" class="a-login">Iniciar Sesion</a></p>
