--- a/src/views/productos.handlebars
+++ b/src/views/productos.handlebars
@@ -1,18 +1,16 @@
 {{#if admin}}
 <nav class="nav">
     <div class="nav-user">
-        {{!-- <button style="display: none;"><a href="/">Iniciar sesion</a></button>
-        <button style="display: none;"><a href="/register">Registrarse</a></button> --}}
         <h4>Bienvenido {{userRegistered.name}}!</h4>
         <h4>Tipo de usuario: {{userRegistered.rol}}</h4>
         <button id="logout" class="btn-logout">Logout</button>
         <button><a href="/administrar">Crear productos</a></button>
-        {{!-- <button id="goCarrito" style="display: none;">Carrito</button> --}}
     </div>
 </nav>
 <div class="containerProd">
 {{#each prods}}
 <div class="product-card cardProd">
+  <button onclick="mostrarform('{{this._id}}')"><?xml version='1.0' encoding='UTF-8'?><svg width='24px' height='24px' viewBox='0 0 24 24' version='1.1' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'><title>edit_fill</title><g id='页面-1' stroke='none' stroke-width='1' fill='none' fill-rule='evenodd'><g id='Editor' transform='translate(-192.000000, -48.000000)' fill-rule='nonzero'><g id='edit_fill' transform='translate(192.000000, 48.000000)'><path d='M24,0 L24,24 L0,24 L0,0 L24,0 Z M12.5934901,23.257841 L12.5819402,23.2595131 L12.5108777,23.2950439 L12.4918791,23.2987469 L12.4918791,23.2987469 L12.4767152,23.2950439 L12.4056548,23.2595131 C12.3958229,23.2563662 12.3870493,23.2590235 12.3821421,23.2649074 L12.3780323,23.275831 L12.360941,23.7031097 L12.3658947,23.7234994 L12.3769048,23.7357139 L12.4804777,23.8096931 L12.4953491,23.8136134 L12.4953491,23.8136134 L12.5071152,23.8096931 L12.6106902,23.7357139 L12.6232938,23.7196733 L12.6232938,23.7196733 L12.6266527,23.7031097 L12.609561,23.275831 C12.6075724,23.2657013 12.6010112,23.2592993 12.5934901,23.257841 L12.5934901,23.257841 Z M12.8583906,23.1452862 L12.8445485,23.1473072 L12.6598443,23.2396597 L12.6498822,23.2499052 L12.6498822,23.2499052 L12.6471943,23.2611114 L12.6650943,23.6906389 L12.6699349,23.7034178 L12.6699349,23.7034178 L12.678386,23.7104931 L12.8793402,23.8032389 C12.8914285,23.8068999 12.9022333,23.8029875 12.9078286,23.7952264 L12.9118235,23.7811639 L12.8776777,23.1665331 C12.8752882,23.1545897 12.8674102,23.1470016 12.8583906,23.1452862 L12.8583906,23.1452862 Z M12.1430473,23.1473072 C12.1332178,23.1423925 12.1221763,23.1452606 12.1156365,23.1525954 L12.1099173,23.1665331 L12.0757714,23.7811639 C12.0751323,23.7926639 12.0828099,23.8018602 12.0926481,23.8045676 L12.108256,23.8032389 L12.3092106,23.7104931 L12.3186497,23.7024347 L12.3186497,23.7024347 L12.3225043,23.6906389 L12.340401,23.2611114 L12.337245,23.2485176 L12.337245,23.2485176 L12.3277531,23.2396597 L12.1430473,23.1473072 Z' id='MingCute' fill-rule='nonzero'></path><path d='M15,3 C16.2958,3 17.4957,3.41077 18.4766,4.10924 L9.34311,13.2427 C8.95258,13.6332 8.95258,14.2664 9.34311,14.6569 C9.73363,15.0474 10.3668,15.0474 10.7573,14.6569 L19.8908,5.52345 C20.5892,6.50427 21,7.70418 21,9 L21,19 C21,20.1046 20.1046,21 19,21 L5,21 C3.89543,21 3,20.1046 3,19 L3,5 C3,3.89543 3.89543,3 5,3 L15,3 Z M21.6568,2.34319 C22.0473,2.73371 22.0473,3.36688 21.6568,3.7574 L19.8908,5.52345 C19.5016,4.97693 19.0231,4.49843 18.4766,4.10924 L20.2426,2.34319 C20.6331,1.95266 21.2663,1.95266 21.6568,2.34319 Z' id='形状' fill='#09244BFF'></path></g></g></g></svg></button>
   <div class="product-card-thumbnail container-img">
     <img src={{this.thumbnail}} />
   </div>
@@ -23,9 +21,18 @@
   <br>
   <span class="product-card-price">Stock: {{this.stock}}</span>
   <br>
+  <button onclick="borrarProd('{{this._id}}')">Borrar producto</button>
 
-    {{!-- <button style="display: none;" class="button-hover-addcart button agregarCarritoC" id="agregarCarrito" onclick="addCarrito('{{this._id}}')"><span>Add</span><i class="fa fa-shopping-cart"></i></button> --}}
-
+<div class="hide" id="upd{{this._id}}">
+  <form id="form{{this._id}}">
+    <label>Campo a actualizar:</label>
+    <input type="text" name="campo" id="campo{{this._id}}">
+    <label>Valor:</label>
+    <input type="text" name="valor" id="valor{{this._id}}">
+    {{!-- <input type="submit" value="Actualizar"> --}}
+  </form>
+    <button id="updateProd{{this._id}}" onclick="updateProduct('{{this._id}}')">Actualizare</button>
+</div>
 </div>
 {{/each}}
 </div>
@@ -36,44 +43,11 @@
         {{#if premium}}
   <nav class="nav">
     <div class="nav-user">
-        {{!-- <button style="display: none;"><a href="/">Iniciar sesion</a></button>
-        <button style="display: none;"><a href="/register">Registrarse</a></button> --}}
         <h4>Bienvenido {{userRegistered.name}}!</h4>
         <h4>Tipo de usuario: {{userRegistered.rol}}</h4>
         <button id="logout" class="btn-logout">Logout</button>
         <button><a href="/administrar">Crear productos</a></button>
-        <button id="goCarrito">Carrito</button>
-        </div>
-</nav>
-<div class="containerProd">
-{{#each prods}}
-<div class="product-card cardProd">
-  <div class="product-card-thumbnail container-img">
-    <img src={{this.thumbnail}} />
-  </div>
-  <span class="oculto">{{this._id}}</span>
-  <h2 class="product-card-title" id="titulo">{{this.title}}</h2>
-  <span class="product-card-desc">{{this.description}}</span>
-  <span class="product-card-price">${{this.price}}</span>
-  <br>
-  <span class="product-card-price">Stock: {{this.stock}}</span>
-  <br>
-    <button class="button-hover-addcart button agregarCarritoC" id="agregarCarrito" onclick="addCarrito('{{this._id}}, {{this.stock}}')"><span>Add</span><i class="fa fa-shopping-cart"></i></button>
-    <div id="prod{{this.title}}"></div>
-</div>
-{{/each}}
-</div>
-    <script src="/js/products.js"></script>
-        {{/if}}
-
-
-        {{#if standard}}
-        <nav class="nav">
-    <div class="nav-user">
-        <h4>Bienvenido {{userRegistered.name}}!</h4>
-        <h4>Tipo de usuario: {{userRegistered.rol}}</h4>
-        <button id="logout" class="btn-logout">Logout</button>
-        <button id="goCarrito">Carrito</button>
+        <button><a href="/carts/{{userRegistered.carrito}}">Carrito</a></button>
         </div>
 </nav>
 <div class="containerProd">
@@ -90,7 +64,38 @@
   <span class="product-card-price">Stock: {{this.stock}}</span>
   <br>
     <button class="button-hover-addcart button agregarCarritoC" id="agregarCarrito" onclick="addCarrito('{{this._id}}')"><span>Add</span><i class="fa fa-shopping-cart"></i></button>
+    <div id="div{{this._id}}"></div>
+</div>
+{{/each}}
+</div>
+    <script src="/js/products.js"></script>
+        {{/if}}
 
+
+        {{#if standard}}
+        <nav class="nav">
+    <div class="nav-user">
+        <h4>Bienvenido {{userRegistered.name}}!</h4>
+        <h4>Tipo de usuario: {{userRegistered.rol}}</h4>
+        <button id="logout" class="btn-logout">Logout</button>
+        <button><a href="/carts/{{userRegistered.carrito}}">Carrito</a></button>
+        </div>
+</nav>
+<div class="containerProd">
+{{#each prods}}
+<div class="product-card cardProd">
+  <div class="product-card-thumbnail container-img">
+    <img src={{this.thumbnail}} />
+  </div>
+  <span class="oculto">{{this._id}}</span>
+  <h2 class="product-card-title" id="titulo">{{this.title}}</h2>
+  <span class="product-card-desc">{{this.description}}</span>
+  <span class="product-card-price">${{this.price}}</span>
+  <br>
+  <span class="product-card-price">Stock: {{this.stock}}</span>
+  <br>
+    <button class="button-hover-addcart button agregarCarritoC" id="agregarCarrito" onclick="addCarrito('{{this._id}}')"><span>Add</span><i class="fa fa-shopping-cart"></i></button>
+  <div id="div{{this._id}}"></div>
 </div>
 {{/each}}
 </div>
@@ -121,10 +126,7 @@
 </div>
 {{/each}}
 </div>
-    {{!-- <script src="/js/products.js"></script> --}}
         {{/if}}
-        {{!-- <button><a href="/">Iniciar sesion</a></button>
-        <button><a href="/register">Registrarse</a></button>
-        <button id="goCarrito">Carrito</button> --}}
+
 
 
