--- a/src/views/productos.handlebars
+++ b/src/views/productos.handlebars
@@ -5,6 +5,7 @@
         <h4>Tipo de usuario: {{userRegistered.rol}}</h4>
         <button id="logout" class="btn-logout">Logout</button>
         <button><a href="/administrar">Crear productos</a></button>
+        <button><a href="/admusers">Actualizar roles</a></button>
     </div>
 </nav>
 <div class="containerProd">
